# vulkan-template

./: .gitignore  CMakeLists.txt
include/: engine.hpp  imgui_backend.hpp  imgui_impl.hpp  input.hpp  queues.hpp  renderer.hpp  swapchain.hpp  utils.hpp  window.hpp
include/vk_wrappers/: image.hpp  imgui_impl.hpp  pipeline.hpp  queues.hpp  shader.hpp  swapchain.hpp
include/wrappers/: image.hpp  pipeline.hpp  queues.hpp  shader.hpp  swapchain.hpp
shaders/: gradient.comp  test.vert
src/: engine.cpp  ext.cpp  imgui_backend.cpp  imgui_impl.cpp  main.cpp  queues.cpp  shader.cpp  swapchain.cpp  window.cpp
